--- a/private/共通テスト自己採点.md
+++ b/private/共通テスト自己採点.md
@@ -1,4 +1,4 @@
-# 共通テスト自己採点
+j# 共通テスト自己採点
 ## リーディング
 | number | temp | points | marked | correct |
 |:------:|:----:|:------:|:------:|:-------:|
@@ -380,20 +380,20 @@
 |    sum |   98 |    100 |      0 |       0 |
 
 ## 合計
-| 科目 | 点数 | 理論値 |　割合（%） |
-|:-:|:-:|:-:|:-:|
-| リーディング | 92 | 100 | 92.0 |
-| リスニング | 74 | 100 | 74.0 |
-| 現代文 | 74 | 110 | 67.3 |
-| 古文 | 15 | 45 | 33.3 |
-| 漢文 | 8 | 45 | 17.8 |
-| 数学ⅠA | 86 | 100 | 86.0 |
-| 数学ⅡBC | 100 | 100 | 100.0 |
-| 地理 | 56 | 100 | 56.0 |
-| 物理 | 78 | 100 | 78.0 |
-| 化学 | 57 | 100 | 57.0 |
-| 情報 | 98 | 100 | 98.0 |
-| 合計 | 750 | 1000 | 75.0 |
+| 科目 | 点数 | 理論値 |　割合（%） | a |
+|:-:|:-:|:-:|:-:|:-:|
+| リーディング | 92 | 100 | 92.0 | 91 |
+| リスニング | 74 | 100 | 74.0 | 77 |
+| 現代文 | 74 | 110 | 67.3 | 88 |
+| 古文 | 15 | 45 | 33.3 | 45 |
+| 漢文 | 8 | 45 | 17.8 | 39 |
+| 数学ⅠA | 86 | 100 | 86.0 | 62 |
+| 数学ⅡBC | 100 | 100 | 100.0 | 63 |
+| 社会 | 56 | 100 | 56.0 | 94 |
+| 物理 | 78 | 100 | 78.0 | 63 |
+| 化学 | 57 | 100 | 57.0 | 51 |
+| 情報 | 98 | 100 | 98.0 | 81 |
+| 合計 | 738 | 1000 | 73.8 | 756 |
 
 ## テンプレート
 | number | temp | points | marked | correct |
