--- a/private/共通テスト自己採点.md
+++ b/private/共通テスト自己採点.md
@@ -380,20 +380,38 @@ j# 共通テスト自己採点
 |    sum |   98 |    100 |      0 |       0 |
 
 ## 合計
-| 科目 | 点数 | 理論値 |　割合（%） | a |
+| 科目 | 偏差値 | 点数 | 理論値 |　割合（%） |
 |:-:|:-:|:-:|:-:|:-:|
-| リーディング | 92 | 100 | 92.0 | 91 |
-| リスニング | 74 | 100 | 74.0 | 77 |
-| 現代文 | 74 | 110 | 67.3 | 88 |
-| 古文 | 15 | 45 | 33.3 | 45 |
-| 漢文 | 8 | 45 | 17.8 | 39 |
-| 数学ⅠA | 86 | 100 | 86.0 | 62 |
-| 数学ⅡBC | 100 | 100 | 100.0 | 63 |
-| 社会 | 56 | 100 | 56.0 | 94 |
-| 物理 | 78 | 100 | 78.0 | 63 |
-| 化学 | 57 | 100 | 57.0 | 51 |
-| 情報 | 98 | 100 | 98.0 | 81 |
-| 合計 | 738 | 1000 | 73.8 | 756 |
+| リーディング | 64.3 | 92 | 100 | 92.0 |
+| リスニング | 56.3 | 74 | 100 | 74.0 |
+| 現代文 |  | 74 | 110 | 67.3 |
+| 古文 |  | 15 | 45 | 33.3 |
+| 漢文 |  | 8 | 45 | 17.8 |
+| 国語 | 41.5 | 97 | 200 | 48.5 |
+| 数学ⅠA | 65.1 | 86 | 100 | 86.0 |
+| 数学ⅡBC | 69.9 | 100 | 100 | 100.0 |
+| 地理 | 49.0 | 56 | 100 | 56.0 |
+| 物理 | 58.3 | 78 | 100 | 78.0 |
+| 化学 | 55.8 | 57 | 100 | 57.0 |
+| 情報 | 67.8 | 98 | 100 | 98.0 |
+| 合計 |  | 738 | 1000 | 73.8 |
+
+## 合計（A）
+| 科目 | 偏差値 | 点数 | 理論値 |　割合（%） |
+|:-:|:-:|:-:|:-:|:-:|
+| リーディング | 63.9 | 91 | 100 | 91.0 |
+| リスニング | 57.8 | 77 | 100 | 77.0 |
+| 現代文 |  | 88 | 110 | 80.0 |
+| 古文 |  | 45 | 45 | 100.0 |
+| 漢文 |  | 39 | 45 | 86.7 |
+| 国語 | 62.9 | 172 | 200 | 86.0 |
+| 数学ⅠA | 53.9 | 62 | 100 | 62.0 |
+| 数学ⅡBC | 54.6 | 63 | 100 | 63.0 |
+| 政治 | 69.7 | 94 | 100 | 94.0 |
+| 物理 | 51.7 | 63 | 100 | 63.0 |
+| 化学 | 52.8 | 51 | 100 | 51.0 |
+| 情報 | 57.2 | 81 | 100 | 81.0 |
+| 合計 | 756 | 1000 | 75.6 |
 
 ## テンプレート
 | number | temp | points | marked | correct |
